--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Network Engineer</div>
+            <div class="role brown-text text-darken-2">Software Engineer</div>
             <ul>
               <li>Handled network maintenance and upgrades to ensure optimal performance and reliability.</li>
             </ul>
